fix menu on mobile

--- a/css/main.scss
+++ b/css/main.scss
@@ -70,6 +70,10 @@ nav ul {
 		position: relative;
 	}
 
+	& li:first-child {
+		margin: 0 10px 0 0;
+	}
+
 	.sub {
 		position: absolute;
 		display: none;
